package com.cristiancid.expensetracker.model.enums;

public enum CategoryType {
        INCOME,
        EXPENSE
    }
